WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185029
<img src=mp4> does not display on ios despite Accept: video/* advertisement
https://bugs.webkit.org/show_bug.cgi?id=185029
Summary
<img src=mp4> does not display on ios despite Accept: video/* advertisement
Colin Bendell
Reported
2018-04-26 08:43:56 PDT
Safari in ios 11.3 added <img src=mp4> support and 'video/*' to the Accept header. Safari for macOS properly displays this content. However, ios returns an empty box and does not render the looping mp4. For example:
https://codepen.io/team/Cloudinary/pen/NMRMEx
<img src="
https://colinbendell.cloudinary.com/image/upload/c_crop,f_mp4,g_auto,h_350,w_400/v1512090972/Wizard-Clap-by-Markus-Magnusson.mp4
">
Attachments
Patch
(3.01 KB, patch)
2018-04-30 12:39 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-04-26 14:43:09 PDT
<
rdar://problem/39771989
>
Jer Noble
Comment 2
2018-04-30 12:39:48 PDT
Created
attachment 339136
[details]
Patch
WebKit Commit Bot
Comment 3
2018-04-30 16:42:28 PDT
Comment on
attachment 339136
[details]
Patch Clearing flags on attachment: 339136 Committed
r231179
: <
https://trac.webkit.org/changeset/231179
>
WebKit Commit Bot
Comment 4
2018-04-30 16:42:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug