<img src=mp4> does not display on ios despite Accept: video/* advertisement https://bugs.webkit.org/show_bug.cgi?id=185029 <rdar://problem/39771989>

Reviewed by Eric Carlson.

Source/WebCore:

Returning "NO" from resourceLoader:shouldWaitForLoadingOfResource: signals that the load failed,
even if the resource request is successfully fulfilled prior to the return. Always return YES in
the case that loading succeeded.

* platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
(-[WebCoreSharedBufferResourceLoaderDelegate resourceLoader:shouldWaitForLoadingOfRequestedResource:]):

LayoutTests:

* platform/ios/TestExpectations:


Canonical link: https://commits.webkit.org/200636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231179 268f45cc-cd09-0410-ab3c-d52691b4dbfc